# rebounz

./: CMakeLists.txt  README.md
include/: ball.hpp  constants.hpp  shape.hpp  simulation.hpp  utils.hpp
src/: ball.cpp  main.cpp  simulation.cpp  utils.cpp
